--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,11 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".services.StepCounterServiceLocal"/>
-        <service android:name=".services.StepCounterServiceRemote"/>
+        <service android:name=".services.StepCounterServiceLocal" />
+        <service
+            android:name=".services.StepCounterServiceRemote"
+            android:exported="true"
+            android:process=":remoteServices"></service>
     </application>
 
 </manifest>
